Rewrite dragging logic